# rust-headless-chrome

./: Cargo.toml
examples/: query_wikipedia.rs  take_screenshot.rs
src/: lib.rs
src/browser/: launch_options.rs  mod.rs  process.rs  process_pipe.rs  process_ws.rs
src/browser/tab/: keyboard.rs  keys.rs  mod.rs  mouse.rs
src/browser/tab/element/: mod.rs
src/browser/transport/: mod.rs  pipe_connection.rs  web_socket_connection.rs
src/protocol/: accessibility.rs  dom.rs  emulation.rs  input.rs  mod.rs  page.rs  target.rs
tests/: extension.rs  simple.rs
