[package]
name = "headless_chrome"
version = "0.9.0"
authors = ["Alistair Roche <alistair@sunburnt.country>"]
edition = "2018"
description = "Control Chrome programatically"
license = "MIT"
homepage = "https://github.com/atroche/rust-headless-chrome"
repository = "https://github.com/atroche/rust-headless-chrome"
readme = "README.md"

[dependencies]
websocket = { version = "0.23", default_features = false, features = ["sync"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
failure = "0.1"
log = "0.4"
rand = "0.7"
tempfile = "3.8.0"
base64 = "0.10"
derive_builder = "0.8"
which = "3.0"
ureq = { version = "0.11", optional = true }
directories = { version = "2.0", optional = true }
zip = { version = "^0.5.3", optional = true }
walkdir = { version = "2", optional = true }

[target.'cfg(windows)'.dependencies]
winreg = "0.6"
winapi = { version = "0.3.8", features = ["std", "handleapi", "namedpipeapi", "processthreadsapi", "winnt", "fileapi", "minwinbase", "minwindef", "winbase", "errhandlingapi", "synchapi"], optional = true }
modular-bitfield = { version = "0.6.0", optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.16.1", optional = true }
libc = { version = "0.2.66", optional = true }

[dev-dependencies]
env_logger = "0.7"
chrono = { version = "0.4", default_features = false }
tiny_http = "0.6"
png = { version = "0.15" }
jpeg-decoder = { version = "0.1", default_features = false }
filepath = "0.1.1"

[lib]
name = "headless_chrome"
path = "src/lib.rs"

[features]
default = []
fetch = [ "ureq", "directories", "zip", "walkdir" ]
pipe = ["nix", "libc", "winapi", "modular-bitfield" ]
nightly = []

